# loop

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: architecture.md  architecture.txt
loop/: __init__.py  agent.py  main.py  slack_app.py  storage.py
scripts/: smoke-mcp.ts
src/: index.ts
src/ai/: agent.ts  extractor.ts
src/config/: env.ts
src/core/: logger.ts  types.ts
src/mcp/: server.ts
src/scheduled/: follow-ups.ts
src/slack/: app.ts  handlers.ts  home-tab.ts  manifest.json  messages.ts  slash-commands.ts
src/storage/: db.ts  embeddings.ts  repo.ts
tests/: ai.test.ts  e2e.test.ts  storage.test.ts
