[project]
name = "loop"
version = "0.2.0"
description = "Loop — a Slack-native AI agent built on Strands"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.44.0",
    "strands-agents-tools>=0.8.1",
    "anthropic>=0.39.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
loop = "loop.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loop"]